# python-dependency-injector

./: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements-ext.txt  setup.py  tox.ini
.github/workflows/: publish-package.yml  test.yml  tests-and-linters.yml
src/dependency_injector/: _cwiring.c  containers.c
tests/unit/: conftest.py
tests/unit/providers/resource/: test_async_resource_py35.py
tests/unit/providers/singleton/: test_singleton_py2_py3.py
